# xai-rss

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.local.toml.example  config.toml  docker-compose.yml  pyproject.toml
data/seed/: corpus.json
docker/: entrypoint.sh
docs/: ARCHITECTURE.md  AUDIO.md  DOCKER.md  OPERATIONS.md  PROPOSAL.md  README.md  SETUP.md
scripts/: logs.sh  run_tts_server.sh  serve_llm.sh  setup_tailscale.sh  setup_tts.sh  tts_server.py  tts_synth.py
src/idigest/: __init__.py  audio.py  cli.py  config.py  digest.py  email_send.py  embeddings.py  figures.py  generate.py  importer.py  ingest.py  llm.py  mathmd.py  pathing.py  seed.py  sources.py  store.py  worker.py
src/idigest/web/: app.py
src/idigest/web/templates/: base.html  concept.html  concepts.html  graph.html  paper.html  path.html  review.html  track.html  tracks.html
systemd/: idigest-digest.service  idigest-digest.timer  idigest-email.service  idigest-email.timer  idigest-ingest.service  idigest-ingest.timer  idigest-llm.service  idigest-tts.service  idigest-web.service
tests/: test_core.py
